Fix navbar toggler invisible issue.
Also navbar-inverse is changed to navbar-dark and navbar-light.
Therefore, these classes should be removed from the html navbar part.

--- a/84_Bootstrap_landing_page/84_landing_page.css
+++ b/84_Bootstrap_landing_page/84_landing_page.css
@@ -12,8 +12,8 @@ body {
 }
 
 /* Nav Bar configuration */
-.navbar {
-    background-color: white;
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(20,65,73,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .nav-link, .navbar-brand{
@@ -26,6 +26,10 @@ body {
 
 
 /* Content configuration */
+.tradingview-widget-container {
+    padding-top: 10%;
+}
+
 #content {
     color: white;
     text-align: center;
@@ -53,9 +57,18 @@ hr {
 
 .btn {
     background-color: rgba(255,255,255,0.1);
+    border-color: rgba(255,255,255,0.1);
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+                 0px 8px 13px rgba(0,0,0,0.2),
+                 0px 18px 23px rgba(0,0,0,0.4);
+
 }
 
 .btn:hover {
     background-color: rgba(255,255,255,0.2);
     border-color: rgba(255,255,255,0.2)
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+                 0px 8px 13px rgba(0,0,0,0.2),
+                 0px 18px 23px rgba(0,0,0,0.4);
+
 }
